tests/neg/i21918.scala
type AliasToAnyVal = AnyVal
class Foo(a: Int) extends AliasToAnyVal // error
